--- a/work.html
+++ b/work.html
@@ -67,7 +67,7 @@
         <div class="row">
           <div class="col-md-6 mb-4">
             <img
-              src="images/yogurt.png"
+              src="images/yougert.png"
               class="img-fluid mb-3 rounded"
               alt="Yogurt project preview"
             />
