--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     </div>
     <div class="hero">
       <p>👋 Hello, I'm</p>
-      <h1>Patricia Pereira</h1>
+      <h1>selamawit tsige</h1>
       <h2 class="mb-5">Front-end developer based in Portugal</h2>
       <div>
         <a href="/contact.html" class="btn btn-branding" title="Contact me"
